<resources>
    <string name="app_name">Basic Phrases</string>
    <string name="hello">Hello</string>
    <string name="how_are_you">How are you?</string>
    <string name="good_evening">Good Evening</string>
    <string name="please">Please</string>
    <string name="my_name_is">My name is...</string>
    <string name="do_you_speak_english">Do you \n speak English?</string>
    <string name="welcome">Welcome</string>
    <string name="i_live_in">I live in...</string>
</resources>
